# q2-bbduk

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
environment-files/: q2-bbduk-qiime2-amplicon-dev.yml  q2-bbduk-qiime2-amplicon-release.yml
q2_bbduk/: __init__.py  _trim.py  plugin_setup.py
q2_bbduk/tests/: __init__.py  test_methods.py
